# csi-ml-esp

./: .gitignore  CMakeLists.txt  README.md  esp_idf_project_configuration.json  espidf_source.bat  partitions.csv  sdkconfig  sdkconfig.old  secrets.h.template
components/alglib/: CMakeLists.txt
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/commands/: csi_command.cpp  csi_command.h  repl_console.cpp  repl_console.h
main/ml/: csi_math.cpp
main/ml/cnn/: cnn.cpp  cnn.h  cnn_model.cc  cnn_normalization.cc
main/ml/features/: features.cpp  features.h
main/ml/forest/: forest.cpp  forest.h
main/ml/nn/: nn.cpp  nn.h  nn_model.cc  nn_normalization.cc
main/storage/: flash.cpp  flash.h
main/wifi/: csi_wifi.cpp  csi_wifi.h
